Update agents-ui package, update modal settings to open settings

--- a/agents-docs/content/docs/talk-to-your-agents/javascript/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/javascript/chat-button.mdx
@@ -54,7 +54,7 @@ The chat button component is a simple way to trigger the Inkeep chat bubble in y
 
 <AutoTypeTable
   path="./content/docs/talk-to-your-agents/types.ts"
-  name="InkeepModalSettings"
+  name="OpenSettingsChatButton"
 />
 
 ### AI Chat Settings
