--- a/agents-docs/content/docs/talk-to-your-agents/javascript/custom-trigger.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/javascript/custom-trigger.mdx
@@ -85,5 +85,5 @@ Custom triggers give you complete control over how users open Inkeep modals in y
 
 <AutoTypeTable
   path="./content/docs/talk-to-your-agents/types.ts"
-  name="InkeepModalSettings"
+  name="OpenSettingsModal"
 />
