--- a/agents-docs/content/docs/talk-to-your-agents/javascript/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/javascript/side-bar-chat.mdx
@@ -93,3 +93,10 @@ The SidebarChat widget provides a slide-out panel interface for conversing with 
   path="./content/docs/talk-to-your-agents/types.ts"
   name="InkeepAIChatSettings"
 />
+
+### Open Settings
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/types.ts"
+  name="OpenSettingsSidebar"
+/>
