--- a/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/side-bar-chat.mdx
@@ -213,3 +213,10 @@ pnpm add @inkeep/agents-ui
   path="./content/docs/talk-to-your-agents/types.ts"
   name="InkeepAIChatSettings"
 />
+
+### Open Settings
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/types.ts"
+  name="OpenSettingsSidebar"
+/>
