--- a/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
@@ -137,9 +137,9 @@ pnpm add @inkeep/agents-ui
   name="InkeepAIChatSettings"
 />
 
-### Modal Settings
+### Open Settings
 
 <AutoTypeTable
   path="./content/docs/talk-to-your-agents/types.ts"
-  name="InkeepModalSettings"
+  name="OpenSettingsModal"
 />
