Add changeset, clean up custom css for widget since styles are now part of the main package

--- a/agents-docs/content/docs/talk-to-your-agents/javascript/custom-trigger.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/javascript/custom-trigger.mdx
@@ -6,7 +6,7 @@ icon: "LuMousePointerClick"
 
 ## Overview
 
-Custom triggers give you complete control over how users open Inkeep modals in your JavaScript application. Instead of using pre-built widgets like `Inkeep.SearchBar()`, you can create your own UI elements that match your design system while maintaining full functionality.
+Custom triggers give you complete control over how users open Inkeep modals in your JavaScript application. Instead of using pre-built widgets like `Inkeep.ChatButton()`, you can create your own UI elements that match your design system while maintaining full functionality.
 
 ## Quick Start
 
