--- a/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/react/custom-trigger.mdx
@@ -6,7 +6,7 @@ icon: "LuMousePointerClick"
 
 ## Overview
 
-Custom triggers give you complete control over how users open Inkeep modals in your React application. Instead of using pre-built components like `InkeepSearchBar`, you can create your own UI elements that match your design system while maintaining full functionality.
+Custom triggers give you complete control over how users open Inkeep modals in your React application. Instead of using pre-built components like `InkeepChatButton`, you can create your own UI elements that match your design system while maintaining full functionality.
 
 ## Installation
 
