--- a/agents-docs/content/docs/talk-to-your-agents/javascript/side-bar-chat.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/javascript/side-bar-chat.mdx
@@ -16,7 +16,7 @@ The SidebarChat widget provides a slide-out panel interface for conversing with 
     ```html
     <script
         type="module"
-        src="https://cdn.jsdelivr.net/npm/@inkeep/agents-ui-js@0.14/dist/embed.js"
+        src="https://cdn.jsdelivr.net/npm/@inkeep/agents-ui-js@0.15/dist/embed.js"
         defer
 
 > </script>
@@ -92,4 +92,11 @@ The SidebarChat widget provides a slide-out panel interface for conversing with 
 <AutoTypeTable
   path="./content/docs/talk-to-your-agents/types.ts"
   name="InkeepAIChatSettings"
+/>
+
+### Open Settings
+
+<AutoTypeTable
+  path="./content/docs/talk-to-your-agents/types.ts"
+  name="OpenSettingsSidebar"
 />
