--- a/agents-docs/content/docs/talk-to-your-agents/javascript/chat-button.mdx
+++ b/agents-docs/content/docs/talk-to-your-agents/javascript/chat-button.mdx
@@ -4,7 +4,7 @@ description: Learn how to use the chat button component in JavaScript
 icon: "LuMessageCircle"
 ---
 
-The chat button component is a simple way to trigger the Inkeep modal in your JavaScript application.
+The chat button component is a simple way to trigger the Inkeep chat bubble in your JavaScript application.
 
 ## Quick Start
 
@@ -14,7 +14,7 @@ The chat button component is a simple way to trigger the Inkeep modal in your Ja
     ```html
     <script
         type="module"
-        src="https://cdn.jsdelivr.net/npm/@inkeep/agents-ui-js@0.14/dist/embed.js"
+        src="https://cdn.jsdelivr.net/npm/@inkeep/agents-ui-js@0.15/dist/embed.js"
         defer
 ></script>
     ```
@@ -50,11 +50,11 @@ The chat button component is a simple way to trigger the Inkeep modal in your Ja
   name="InkeepBaseSettings"
 />
 
-### Modal Settings
+### Open Settings
 
 <AutoTypeTable
   path="./content/docs/talk-to-your-agents/types.ts"
-  name="InkeepModalSettings"
+  name="OpenSettingsChatButton"
 />
 
 ### AI Chat Settings
