inkeep ai and mcp titles clean up

--- a/agents-docs/content/docs/community/inkeep-community.mdx
+++ b/agents-docs/content/docs/community/inkeep-community.mdx
@@ -8,7 +8,7 @@ To get help, share ideas, and provide feedback, join our [Slack community](https
 You can also find us on:
 
 <Cards>
-  <Card title="𝕏 (Twitter)" icon="LuTwitter" href="https://x.com/inkeep_ai">
+  <Card title="𝕏 (Twitter)" icon="LuTwitter" href="https://x.com/inkeep">
     Updates, tips, and shout‑outs for builders. 
   </Card>
   <Card title="GitHub" icon="LuGithub" href="https://github.com/inkeep/agents">
@@ -22,4 +22,4 @@ You can also find us on:
   </Card>
 </Cards>
 
-Feel free to tag us as `@inkeep_ai` on 𝕏 or `@Inkeep` on LinkedIn with a video of what you're building — we like to highlight neat Agent use cases from the community where possible. Also feel free to submit a PR to our [template library](https://github.com/inkeep/agents-cookbook/tree/main/template-projects).
+Feel free to tag us as `@inkeep` on 𝕏 or `@Inkeep` on LinkedIn with a video of what you're building — we like to highlight neat Agent use cases from the community where possible. Also feel free to submit a PR to our [template library](https://github.com/inkeep/agents-cookbook/tree/main/template-projects).
