--- a/agents-docs/content/docs/get-started/quick-start.mdx
+++ b/agents-docs/content/docs/get-started/quick-start.mdx
@@ -63,7 +63,13 @@ To help with development, add the `Inkeep Agents MCP` to your preferred IDE or M
   </a>
 </div>
 
-Or manually install with any MCP client:
+To add to **Claude Code**, run this in your terminal:
+
+```bash
+claude mcp add --transport http inkeep-agents https://agents.inkeep.com/mcp --scope project
+```
+
+Or manually add to any MCP client:
 
 ```json
 {
