--- a/agents-docs/content/docs/troubleshooting.mdx
+++ b/agents-docs/content/docs/troubleshooting.mdx
@@ -73,6 +73,17 @@ If your agent stops mid-conversation, it may have hit a configured stopWhen limi
 
 See [Configuring StopWhen](/typescript-sdk/agent-settings#configuring-stopwhen) for more details.
 
+## Step 3: Check service logs in local development
+
+When running `pnpm dev` from your [quickstart workspace](/quick-start/start-development), you will see an interactive terminal interface that allows you to inspect the logs of each running service. You can navigate between services using the up and down arrow keys.
+
+![Service logs in local development](/images/agents-quickstart-pnpm-dev.png)
+
+- The `manage-api` tab contains logs for all database operations. This is useful primarily for debugging issues with [`inkeep push`](/typescript-sdk/push-pull-workflows).
+- The `run-api` tab contains logs for all agent execution and tool calls. This is useful for debugging issues with your agent's behavior.
+
+To terminate the running services, click on the `Processes` box and press `q`.
+
 ## Common Configuration Issues
 
 ### General Configuration Issues
