--- a/agents-docs/content/docs/troubleshooting.mdx
+++ b/agents-docs/content/docs/troubleshooting.mdx
@@ -73,7 +73,7 @@ If your agent stops mid-conversation, it may have hit a configured stopWhen limi
 
 See [Configuring StopWhen](/typescript-sdk/agent-settings#configuring-stopwhen) for more details.
 
-## Step 3: Check service logs in local development
+## Check service logs (local development)
 
 When running `pnpm dev` from your [quickstart workspace](/quick-start/start-development), you will see an interactive terminal interface. This interface allows you to inspect the logs of each [running service](/quick-start/start-development#service-ports). You can navigate between services using the up and down arrow keys.
 
