--- a/agents-docs/content/docs/get-started/push-pull.mdx
+++ b/agents-docs/content/docs/get-started/push-pull.mdx
@@ -37,10 +37,8 @@ inkeep add --project docs-assistant
 
 Find the downloaded code in `src/projects/docs-assistant`.
 
-<Note>
-  `inkeep add` imports a template project from our [cookbook
-  library](https://github.com/inkeep/agents/tree/main/packages/agents-cookbook/template-projects)
-  into your src/projects directory.
+<Note> 
+`inkeep add` imports a template project from our [cookbook library](https://github.com/inkeep/agents/tree/main/agents-cookbook/template-projects) into your src/projects directory.
 </Note>
 
 ### Step 3: Push code to visual
