remove examples folder

--- a/agents-docs/content/docs/community/contributing/overview.mdx
+++ b/agents-docs/content/docs/community/contributing/overview.mdx
@@ -78,13 +78,13 @@ pnpm install -g @inkeep/agents-cli
 ### Step 2: Push the project
 
 ```bash
-cd examples
+cd agents-cookbook/template-projects/weather-project
 inkeep push
 ```
 
 <Note>
   The project will be pushed according to the project specified in the
-  `/examples/inkeep.config.ts` file, which is set to the `default` project by
+  `/agents-cookbook/template-projects/inkeep.config.ts` file, which is set to the `default` project by
   default. Feel free to change it to your own project.
 </Note>
 
