--- a/agents-docs/_snippets/copy-trace.mdx
+++ b/agents-docs/_snippets/copy-trace.mdx
@@ -2,11 +2,9 @@
 
 The `Copy Trace` button in the timeline view allows you to export the entire conversation trace as JSON. This is particularly useful for offline analysis and debugging complex flows.
 
-<img
+<Image
   src="/images/copy-trace.png"
-  width="100%"
   alt="Copy Trace button in the timeline view for exporting conversation traces"
-  style={{ borderRadius: "10px" }}
 />
 
 #### What's Included in the Trace Export
