--- a/agents-docs/content/docs/typescript-sdk/signoz-usage.mdx
+++ b/agents-docs/content/docs/typescript-sdk/signoz-usage.mdx
@@ -9,8 +9,8 @@ icon: "brand/Signoz"
 SigNoz is a full-stack observability platform that provides distributed tracing so that you can track requests across multiple agents and services.
 
 ### Quick Start
-Before using SigNoz, ensure it's properly set up and running. For setup instructions, see the [Quick Start](/get-started/traces) guide. 
 
+Before using SigNoz, ensure it's properly set up and running. For setup instructions, see the [Quick Start](/get-started/traces) guide.
 
 ## Using SigNoz UI
 
@@ -20,11 +20,10 @@ The **Traces** page provides detailed request tracing:
 
 The SigNoz traces interface provides comprehensive visibility into your agent operations:
 
-<img
+<Image
   src="/images/signoz-traces-ui.png"
   alt="SigNoz Traces Explorer showing inkeep-agents-run-api service traces with timestamp, service name, operation name, duration, HTTP method, and response status code columns"
-  width="100%"
-  style={{ borderRadius: "10px", border: "1px solid #e1e5e9" }}
+  style={{ border: "1px solid #e1e5e9" }}
 />
 
 The traces explorer shows:
@@ -70,11 +69,10 @@ agent.id = "customer-support-agent"
 
 When you click on a specific trace from the list, you'll see the detailed trace view with a flamegraph visualization:
 
-<img
+<Image
   src="/images/signoz-trace-details.png"
   alt="SigNoz Trace Details showing flamegraph visualization with span hierarchy, timing information, and detailed span attributes"
-  width="100%"
-  style={{ borderRadius: "10px", border: "1px solid #e1e5e9" }}
+  style={{ border: "1px solid #e1e5e9" }}
 />
 
 **Flamegraph Visualization:**
