--- a/agents-docs/content/docs/ui-components/customization/styling.mdx
+++ b/agents-docs/content/docs/ui-components/customization/styling.mdx
@@ -373,7 +373,7 @@ export const baseSettings: InkeepBaseSettings = {
 };
 ```
 
-> If the url for a `custom` icon is a `.svg` file it will be rendered as an `<svg>`, all other file types will be rendered using an `<img>` tag.
+> If the url for a `custom` icon is a `.svg` file it will be rendered as an `<svg>`, all other file types will be rendered using an `<Image>` tag.
 
 ## Default Theme
 
