--- a/agents-docs/content/docs/visual-builder/tools/function-tools.mdx
+++ b/agents-docs/content/docs/visual-builder/tools/function-tools.mdx
@@ -35,12 +35,10 @@ Function tools are created within an Agent and can be used by multiple Sub Agent
 
 3. **Connect to Agents**: Drag from the function tool node to any agent nodes that should have access to this tool
 
-<img
+<Image
   src="/images/function-tool-node-editor.png"
   alt="Function Tool Node Editor"
-  width="100%"
   style={{
-    borderRadius: "10px",
     border: "1px solid #e1e5e9",
   }}
 />
