--- a/agents-docs/content/docs/community/inkeep-community.mdx
+++ b/agents-docs/content/docs/community/inkeep-community.mdx
@@ -3,7 +3,13 @@ title: Join & Follow
 icon: "LuUsers"
 ---
 
-To get help, share ideas, and provide feedback, join our [Slack community](https://inkeep-ai.slack.com/ssb/redirect). We'd love to hear about what you're building.
+To get help, share ideas, and provide feedback, join our community:
+
+<Cards>
+  <Card title="Slack" icon="LuSlack" href="https://inkeep-ai.slack.com/ssb/redirect">
+    Get support, share ideas, and connect with other builders.
+  </Card>
+</Cards>
 
 You can also find us on:
 
@@ -22,4 +28,4 @@ You can also find us on:
   </Card>
 </Cards>
 
-Feel free to tag us as `@inkeep_ai` on 𝕏 or `@Inkeep` on LinkedIn with a video of what you're building — we like to highlight neat Agent use cases from the community where possible. Also feel free to submit a PR to our [template library](https://github.com/inkeep/agents/tree/main/agents-cookbook/template-projects).
+Feel free to tag us as `@inkeep` on 𝕏 or `@Inkeep` on LinkedIn with a video of what you're building — we like to highlight neat Agent use cases from the community where possible. Also feel free to submit a PR to our [template library](https://github.com/inkeep/agents/tree/main/agents-cookbook/template-projects).
