--- a/agents-docs/content/docs/typescript-sdk/agent-relationships.mdx
+++ b/agents-docs/content/docs/typescript-sdk/agent-relationships.mdx
@@ -57,11 +57,15 @@ const supportAgent = agent({
   id: "customer-support-agent",
   defaultSubAgent: routerSubAgent,
   subAgents: () => [routerSubAgent, qaSubAgent, orderSubAgent],
-  modelSettings: {
-    model: "anthropic/claude-sonnet-4-5",
-    structuredOutput: "openai/gpt-4.1-mini",
-    providerOptions: {
-      anthropic: { temperature: 0.5 },
+  models: {
+    base: {
+      model: "anthropic/claude-sonnet-4-5",
+      providerOptions: {
+        anthropic: { temperature: 0.5 },
+      },
+    },
+    structuredOutput: {
+      model: "openai/gpt-4.1-mini",
     },
   },
 });
