updated that too

--- a/agents-docs/content/docs/typescript-sdk/agent-relationships.mdx
+++ b/agents-docs/content/docs/typescript-sdk/agent-relationships.mdx
@@ -61,7 +61,7 @@ const supportAgent = agent({
     base: {
       model: "anthropic/claude-sonnet-4-5",
       providerOptions: {
-        anthropic: { temperature: 0.5 },
+        temperature: 0.5,
       },
     },
     structuredOutput: {
